--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "progateweatherapp",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
+  "homepage": "http://adibbaguss.github.io/WeatherApp-API-React-Native ",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo export:web",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -19,7 +23,8 @@
     "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^6.1.1"
   },
   "private": true
 }
